// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should show cross icon when input value exists 1`] = `
<Search
  placeholder=""
  value=""
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      type="text"
      value=""
    >
      <Consumer>
        <input
          className="ant-input"
          disabled={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          type="text"
          value=""
        />
      </Consumer>
    </Input>
    <span
      className="undefined-action"
    >
      <Icon
        type="search"
      >
        <LocaleReceiver
          componentName="Icon"
        >
          <i
            aria-label="icon: search"
            className="anticon anticon-search"
          >
            <svg
              aria-hidden="true"
              className=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                xlinkHref="#search"
              />
            </svg>
          </i>
        </LocaleReceiver>
      </Icon>
    </span>
  </div>
</Search>
`;

exports[`Search should show cross icon when input value exists 2`] = `
<Search
  placeholder=""
  value="a"
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      type="text"
      value="a"
    >
      <Consumer>
        <input
          className="ant-input"
          disabled={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          type="text"
          value="a"
        />
      </Consumer>
    </Input>
    <a
      className="undefined-action"
      href="#"
      onClick={[Function]}
    >
      <Icon
        theme="filled"
        type="close-circle"
      >
        <LocaleReceiver
          componentName="Icon"
        >
          <i
            aria-label="icon: close-circle"
            className="anticon anticon-close-circle"
          >
            <svg
              aria-hidden="true"
              className=""
              fill="currentColor"
              focusable="false"
              height="1em"
              width="1em"
            >
              <use
                xlinkHref="#close-circle"
              />
            </svg>
          </i>
        </LocaleReceiver>
      </Icon>
    </a>
  </div>
</Search>
`;
